# fundus_image_toolbox

./: .gitignore  LICENSE  MANIFEST.in  Readme.md  pyproject.toml  requirements.txt  setup.py  todos.md  tox.ini  train_quality_single-model.ipynb  training_fovea-od.ipynb  usage.ipynb
.dev/: Readme.md  img_to_tensor_shape_checks.ipynb  todos.md
0_example_usage/: usage_all.ipynb  usage_circle-crop.ipynb  usage_circle_crop.ipynb  usage_fovea-od_inference.ipynb  usage_quality.ipynb  usage_registration.ipynb  usage_vessel-segmentation.ipynb
0_example_usage/fovea_od data preparation/: misc_fovea-od_combine_IDRID_ADAM_REFUGE.ipynb
0_example_usage/training and evaluation/: training_fovea-od.ipynb  training_fovea-od_cli.py  training_quality_cli.py  training_quality_eval_ensemble.ipynb  training_quality_single-model.ipynb
0_example_usage/training and evaluation/fovea_od data preparation/: misc_fovea-od_combine_IDRID_ADAM_REFUGE.ipynb  misc_fovea-od_masks_to_coordinates_ADAM.ipynb  misc_fovea-od_masks_to_coordinates_REFUGE.ipynb
1_read_more/: Readmore_circle_crop.md  Readmore_fovea_od_localization.md  Readmore_quality_prediction.md  Readmore_registration.md  Readmore_utilities.md  Readmore_vessel_segmentation.md
fundus_circle_crop/: Readme.md  eyeq_preprocess.py  requirements.txt  setup.py  usage.ipynb
fundus_circle_crop/fundus_circle_crop/: __init__.py  eyeq_preprocess.py
fundus_circle_crop__/: setup.py  usage.ipynb
fundus_fovea_od_localization/: Readme.md  misc_masks_to_coordinates_REFUGE.ipynb  model_multi.py  requirements.txt  setup.py  train_multi.py  usage.ipynb
fundus_fovea_od_localization/fundus_fovea_od_localization/: dataset_multi.py  default.py  model_multi.py  train_multi.py  transforms_multi.py
fundus_fovea_od_localization__/: .gitignore  misc_combine_IDRID_ADAM_REFUGE.ipynb  misc_masks_to_coordinates_ADAM.ipynb  training_cli.py
fundus_image_toolbox/: __init__.py
fundus_image_toolbox/circle_crop/: __init__.py  eyeq_preprocess.py
fundus_image_toolbox/fovea_od_localization/: __init__.py  default.py  model_multi.py  train_multi.py
fundus_image_toolbox/registration/: inference.py
fundus_image_toolbox/utilities/: basics.py
fundus_image_toolbox/utils/: balancing.py  basics.py  image_torch_utils.py  lr_scheduler.py  model_cache.py
fundus_image_toolbox/vessel_segmentation/: clone.py  inference.py
fundus_quality_prediction/: Readme.md  requirements.txt  train_cli.py  usage_inference.ipynb  usage_train_single.ipynb
fundus_quality_prediction/scripts/: dataloader.py
fundus_quality_prediction__/: requirements.txt  train_cli.py  usage_eval_ensemble.ipynb
fundus_registration/: inference.py  requirements.txt  setup.py  usage.ipynb
fundus_registration/SuperRetina/: predictor.py  test_on_FIRE.py  test_on_VARIA.py  train.py
fundus_registration/fundus_registration/: __init__.py  inference.py
fundus_registration__/: Readme.md  requirements.txt  setup.py
fundus_utilities/: .gitignore  Readme.md  get_efficientnet_resnet.py  requirements.txt  set_seed.py  setup.py
fundus_utilities/fundus_utilities/: __init__.py  balancing.py  fundus_transforms.py  get_pixel_mean_std.py  image_torch_utils.py  multilevel_3way_split.py  plotting.py  set_seed.py
fundus_vessel_segmentation/: .gitignore  inference.py  requirements.txt  setup.py  usage.ipynb
fundus_vessel_segmentation/fundus_vessel_segmentation/: __init__.py  clone.py  default.py  inference.py
fundus_vessel_segmentation/masks/: masks.pkl
fundus_vessel_segmentation__/: .gitignore  Readme.md
outdated/: setup_.py
outdated/fundus_circle_crop__/: Readme.md  requirements.txt
outdated/fundus_fovea_od_localization__/: MANIFEST.in  Readme.md
outdated/fundus_quality_prediction__/: .gitignore  Readme.md
outdated/fundus_registration__/: Readme.md
outdated/fundus_utilities__/: requirements.txt
outdated/fundus_vessel_segmentation__/: setup.py
paper/: paper.bib  paper.md
registration/: inference.py
test/: test_circle_crop.py  test_fovea_od.py  test_image_torch_utils.py  test_quality_prediction.py  test_quality_prediction_img_size.py  test_registration.py  test_utilities_image_torch_utils.py  test_vessel_segmentation.py  test_weight_cache.py  test_weight_cache_download_integration.py
vessel_segmentation/: __init__.py
(+74 files in other folders)
